fix : fixing swagger docs
